--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <input type="text" id="name" name="name" placeholder="Ex. Franco Melcon" required="">
               <label for="age">Age <span class="pista">(optional)</span></label>
               <input type="text" id="age" name="age" placeholder="Age">
-              <label for="location">location</label>
+              <label for="location">Location</label>
               <input type="text" id="location" name="location" placeholder="Buenos Aires, Argentina" required="">
               <label id="email-label" for="mail">Email</label>
               <input type="email" id="email" name="email" placeholder="Yourmail@domain.com" required="">
@@ -39,10 +39,10 @@
             <div class="form-field">
               <p>How often do you go to the Cinema?</p>
               <label>
-                <input name="user-concurrency" value="sometimes" type="radio" class="input-radio" required="">sometimes
+                <input name="user-concurrency" value="Sometimes" type="radio" class="input-radio" required="">sometimes
               </label>
               <label>
-                <input name="user-concurrency" value="barely" type="radio" class="input-radio">barely
+                <input name="user-concurrency" value="Barely" type="radio" class="input-radio">barely
               </label>
               <label>
                 <input name="user-concurrency" value="Never" type="radio" class="input-radio">Never
