--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <div class="form-field">
               <p>How often do you go to the Cinema?</p>
               <label>
-                <input name="user-concurrency" value="Sometimes" type="radio" class="input-radio" required="">sometimes
+                <input name="user-concurrency" value="Sometimes" type="radio" class="input-radio" required="">Sometimes
               </label>
               <label>
-                <input name="user-concurrency" value="Barely" type="radio" class="input-radio">barely
+                <input name="user-concurrency" value="Barely" type="radio" class="input-radio">Barely
               </label>
               <label>
                 <input name="user-concurrency" value="Never" type="radio" class="input-radio">Never
